upg-loadme-app/statefulset.yaml
# Redis Statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-server
  namespace: demo
spec:
  selector:
    matchLabels:
      app: redis # has to match .spec.template.metadata.labels
  serviceName: "redis-service"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: redis # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: redis:6.2.6-alpine
        ports:
        - containerPort: 6379
          name: redis
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
        envFrom:                 # Attaching config map
          - configMapRef:
              name: redis-config
        volumeMounts:
        - name: my-pv
          mountPath: /var/lib/redis
      volumes:
        - name: my-pv
          persistentVolumeClaim:
            claimName: data-volume
